test/frontend/fail/invalid_ellipsis.osl
__attribute__((builtin)) void foo(..., int);
void bar(...);
shader test() {}
